--- a/src/sections/hero/introduction.module.css
+++ b/src/sections/hero/introduction.module.css
@@ -153,7 +153,7 @@
   }
 }
 
-@media (min-width: 1061px) {
+@media (min-width: 1161px) {
   .heroTextBlock {
     align-items: flex-start;
     gap: var(--2xl);
